--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <header>
-        <img src="top_image.jpg" alt="Top Image" class="logo">
+        <img src="top_image.png" alt="Top Image" class="logo"> <!-- Change the file extension to .png -->
         <h1>Student Account Information</h1>
     </header>
     <main>
@@ -23,7 +23,7 @@
         </div>
     </main>
     <footer>
-        <img src="bottom_image.jpg" alt="Bottom Image" class="footer-image">
+        <img src="bottom_image.png" alt="Bottom Image" class="footer-image"> <!-- Change the file extension to .png -->
     </footer>
     <script src="app.js"></script>
 </body>
