--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 </head>
 <body>
     <header>
-        <img src="top_image.png" alt="Top Image" class="logo"> <!-- Change the file extension to .png -->
-        <h1>Student Account Information</h1>
+        <img src="top_image.png" alt="Top Image" class="logo">
     </header>
     <main>
+        <h1>Student Account Information</h1>
         <div class="student-info">
             <h2>Student Information</h2>
             <p id="student-name">Name: John Doe</p>
@@ -23,7 +23,7 @@
         </div>
     </main>
     <footer>
-        <img src="bottom_image.png" alt="Bottom Image" class="footer-image"> <!-- Change the file extension to .png -->
+        <img src="bottom_image.png" alt="Bottom Image" class="footer-image">
     </footer>
     <script src="app.js"></script>
 </body>
