--- a/index.html
+++ b/index.html
@@ -14,12 +14,12 @@
         <h1>Student Account Information</h1>
         <div class="student-info">
             <h2>Student Information</h2>
-            <p id="student-name">Name: John Doe</p>
-            <p id="student-id">ID: 123456</p>
+            <p id="student-name">Name: Yubin Gu</p>
+            <p id="student-id">ID: 34441646</p>
         </div>
         <div class="account-balance">
             <h2>Account Balance</h2>
-            <p id="balance">Balance: $500.00</p>
+            <p id="balance">Balance: £25,500.00</p>
         </div>
     </main>
     <footer>
