--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <h1>Student Account Information</h1>
         <div class="student-info">
             <h2>Student Information</h2>
-            <p id="student-name">Name: Yubin Gu</p>
-            <p id="student-id">ID: 34441646</p>
+            <p id="student-name">Name: Marcus</p>
+            <p id="student-id">ID: 1123456</p>
         </div>
         <div class="account-balance">
             <h2>Account Balance</h2>
