--- a/index.html
+++ b/index.html
@@ -15,11 +15,12 @@
         <div class="student-info">
             <h2>Student Information</h2>
             <p id="student-name">Name: Marcus</p>
-            <p id="student-id">ID: 1123456</p>
+            <p id="student-id">ID: 34441646</p>
         </div>
         <div class="account-balance">
             <h2>Account Balance</h2>
             <p id="balance">Balance: £25,500.00</p>
+            <p id="balance">Bench Fee: £5,000.00</p>
         </div>
     </main>
     <footer>
