--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="account-balance">
             <h2>Account Balance</h2>
             <p id="balance">Balance: £25,500.00</p>
-            <p id="balance">Bench Fee: £5,000.00</p>
+            <p id="bench-fee">Bench Fee: £5,000.00</p>
         </div>
     </main>
     <footer>
