--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h1>Student Account Information</h1>
         <div class="student-info">
             <h2>Student Information</h2>
-            <p id="student-name">Name: Marcus</p>
+            <p id="student-name">Name: YUBIN GU</p>
             <p id="student-id">ID: 34441646</p>
         </div>
         <div class="account-balance">
