--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
         <h1>Student Account Information</h1>
         <div class="student-info">
             <h2>Student Information</h2>
-            <p id="student-name">Name: YUBIN GU</p>
-            <p id="student-id">ID: 34441646</p>
+            <p id="student-name">Name: MARCUS</p>
+            <p id="student-id">ID: 31234566</p>
         </div>
         <div class="account-balance">
             <h2>Account Balance</h2>
-            <p id="balance">Balance: £25,500.00</p>
-            <p id="bench-fee">Bench Fee: £5,000.00</p>
+            <p id="balance">Balance: £0000000.00</p>
+            <p id="bench-fee">Bench Fee: £002120.00</p>
         </div>
     </main>
     <footer>
